se arregla un bug con los nuevos collapses

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -19,3 +19,7 @@
 .bg-decor-blue{
     background-color: rgb(168, 188, 196);
 }
+
+.bg-decor-veryLightBlue{
+    background-color: rgb(210, 230, 240);
+}
